stress test update, diskStorage edit; readded local console database